--- a/requirements.txt
+++ b/requirements.txt
@@ -16,15 +16,18 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.6
+psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+redis==5.0.7
 rich==13.7.1
 shellingham==1.5.4
 sniffio==1.3.1
+SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
