--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.6.1
 email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.4
+fastapi-utils==0.7.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -15,7 +16,9 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mypy-extensions==1.0.0
 orjson==3.10.6
+psutil==5.9.8
 psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
@@ -30,6 +33,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 ujson==5.10.0
 uvicorn==0.30.1
